# sonic

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  justfile  mypy.ini  pyproject.toml  server.sh  test.sh  todo.md
sonic/: error.py  errors.py  logging.py  main.py  model.py  monitoring.py  settings.py  telemetry.py
sonic/adapters/: repository.py
sonic/api/: add_transaction.py  errors.py  main.py  parser.py  router.py  shared.py  transactions.py
sonic/domain/: add_transaction.py  model.py
sonic/helpers/: errors.py
sonic/repositories/: transaction.py
sonic/service_layer/: services.py  unit_of_work.py
tests/: fakes.py  helpers.py  test_settings.py
tests/performance/: .gitignore  README.md  docker-compose.yml  package.json  prometheus.yml  test.sh  tsconfig.json
tests/performance/grafana/dashboards/: dashboard.yml
tests/performance/src/: test_dev.ts  test_example.ts
tests/test_api/: test_add_transaction.py
tests/test_domain/: test_add_transaction.py  test_model.py
tests/unit/: test_settings.py
tests/unit/api/: test_parse_transaction.py  test_parser.py  test_transactions.py
tests/unit/domain/: test_model.py
tests/unit/service_layer/: test_add_transaction.py
